# Kuai-recommendor

./: .gitignore  README.md  pyproject.toml  todo.md
kuai_recommender/: config.py
kuai_recommender/data/: data_pure.py  utils.py
kuai_recommender/nn/: loss.py  multitask.py
kuai_recommender/train/: train_helper.py  train_multitask.py
kuai_recommender/utils/: device.py  git.py
tests/data/: test_data_pure.py
tests/nn/: test_loss.py  test_multitask.py
tests/train/: test_train_helper.py
