[project]
name = "kuai-recommender"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "torch>=2.13.0",
    "transformers>=5.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kuai_recommender"]

[dependency-groups]
test = [
    "pytest>=9.1.1",
]
